Fix file upload issues and increase upload limit to 100MB
- Configure PRIVATE_OBJECT_DIR environment variable for local file storage
- Increase Express body size limits to 100MB for large file uploads
- Fix ObjectUploader authentication by including JWT token in upload headers
- Update upload URL format to use full URLs instead of relative paths
- Increase client-side maxFileSize limit to 100MB in ObjectUploader and AddPatient
- Add storage directory to .gitignore to prevent committing uploaded files
- Update .env.example with PRIVATE_OBJECT_DIR configuration
- Add debug logging for upload URL tracking

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ JWT_ISSUER=https://myclinic.app
 PORT=5000
 NODE_ENV=development
 
+# Object Storage Configuration
+PRIVATE_OBJECT_DIR=storage/private
+
 # Object Storage (if using external storage)
 # GOOGLE_CLOUD_STORAGE_BUCKET=your-bucket-name
 # GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account.json
